# external-validity

./: .gitignore  .gitmodules  LICENSE  README.md  build.sh  experiments.py  package_data.sh  run_and_build_plots.sh
R/: avg_dist_tests.R  bbbfs.R  cliques.R  coloring.R  create_plots.R  data_export.R  diameter.R  locality_heterogeneity_measures.R  louvain.R  params_for_generated.R  vertex_cover_dominance.R
R/helper/: load_dependencies.R  load_helpers.R  main_plots.R  msg.R  read_data.R  stat_aggregate_2d.R  table_output.R  theme.R
code/: .gitignore  CMakeLists.txt
code/cli/: avg_deg_locality.cpp  avg_detour_dist.cpp  avg_dist.cpp  chung_lu.cpp  cliques.cpp  closure.cpp  closure_weak.cpp  clustering_coeff.cpp  coloring.cpp  deg_distr.cpp  degeneracy.cpp  diameter_bounds.cpp  diameter_exact.cpp  dist.cpp  girg.cpp  louvain.cpp  prepare_graph_formats.cpp  random_graph.cpp  size.cpp  vertex_cover_dominance.cpp
code/include/bfs/: bfs.hpp  bfs_bi.hpp  bfs_bi_always_swap.hpp  bfs_bi_balanced.hpp  dist.hpp
code/include/coloring/: core.hpp
code/include/diameter/: bounds.hpp  eccentricity.hpp  exact.hpp  sweep.hpp
code/include/framework/: app.hpp  bucket_heap.hpp  component_structure.hpp  graph.hpp  graph_operations.hpp  graph_parser.hpp  graph_writer.hpp  random.hpp  range.hpp
code/include/generator/: random_graph.hpp
code/include/local_search/: louvain.hpp
code/include/stats/: avg_deg_locality.hpp  avg_detour_dist.hpp  avg_dist.hpp  bridges.hpp  closure.hpp  clustering_coeff.hpp  degeneracy.hpp  histogram.hpp
code/include/vertex_cover/: dominance.hpp
code/src/bfs/: bfs.cpp  bfs_bi.cpp  bfs_bi_always_swap.cpp  bfs_bi_balanced.cpp
code/src/coloring/: core.cpp
code/src/diameter/: bounds.cpp  eccentricity.cpp  exact.cpp  sweep.cpp
code/src/framework/: bucket_heap.cpp  component_structure.cpp  graph.cpp  graph_operations.cpp  graph_parser.cpp  graph_writer.cpp  random.cpp  timer.cpp
code/src/generator/: random_graph.cpp
code/src/local_search/: louvain.cpp
code/src/stats/: avg_deg_locality.cpp  avg_detour_dist.cpp  avg_dist.cpp  bridges.cpp  closure.cpp  clustering_coeff.cpp  degeneracy.cpp  histogram.cpp
code/src/vertex_cover/: dominance.cpp
docker/: .gitignore  README.md  build.sh  dockerfile  enter.sh  kill.sh  load.sh  mirrorlist  run.sh  save.sh  setup_data.sh
scripts/: README.md  merge-csv.sh
scripts/networks/: 10_networks_html_to_csv.sh  20_select_networks.R  30_nr_download_networks.sh  40_find_duplicate_networks.R  50_remove_duplicates.sh  README.md
scripts/networks/data/: all_networks.csv  duplicate_network_groups.RDS  duplicates.txt  selected_networks.txt
